Fixed spacing issue with textarea. #3

--- a/src/style/textarea.css
+++ b/src/style/textarea.css
@@ -1,4 +1,5 @@
 .agate-textarea-decorator {
+  display: block;
 	padding: 6px 8px 10px 8px;
 	border-radius: 3px;
 	border: 1px solid;
@@ -31,6 +32,7 @@
 	/* FIXME: hack for styling reset on Android */
 	/* -webkit-appearance: caret;*/
   resize: none;
+  width: 100%;
 }
 
 .agate-textarea-decorator.agate-focused > textarea {
